# setcover

./: .gitignore  AGENTS.md  README.md  justfile
crates/setcover-core/src/: bitset.rs  dense.rs  lib.rs  mapping.rs
py-setcover/: README.md  pyproject.toml
py-setcover/setcover/: __init__.py
py-setcover/src/: lib.rs
py-setcover/tests/: test_bindings.py
scripts/benchmark/: README.md  make_data.py  time_py.py  time_r.r
